Use settings from env if specified, set width of the top level div for discover campaigns. Else the width of the div goes too small and messes up the layout. Similar to the fix for beneficiary dashboard.

--- a/frp/frp/static/css/prathambooks.css
+++ b/frp/frp/static/css/prathambooks.css
@@ -1114,6 +1114,9 @@ header #login .dropdown-menu {
   clear: both;
   margin: 0 0 10px;
 }
+.discover {
+  width: 100%;
+}
 .internal #internalContent.discover-top .col-md-3 {
   margin: 0;
 }
